# k-dense-byok

./: .coverage  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  env-file.d.mts  env-file.mjs  litellm_callbacks.py  package.json  pyproject.toml  server.py  start.cmd  start.mjs  start.sh
.github/workflows/: tests.yml
.serena/: project.yml
docs/: CHECKLIST-100.md  PRD-deliberation-backends-and-workflow-runner.md  architecture.md  basic-usage.md  file-previews.md  installation.md  lab-notebook.md  limitations.md  local-models-ollama.md  model-selection.md  openrouter-fusion.md
kady_agent/: projects.py  sandbox_visibility.py
kady_agent/api/: runs.py  sandbox.py
kady_agent/instructions/: gemini_cli.md  main_agent.md
kady_agent/tools/: gemini_cli.py
scripts/: update-models.py
server/: package-lock.json  package.json  vitest.config.ts
server/src/: binaries.ts  config.ts  env.ts  helpers-env.ts  index.ts  prep.ts  projects.ts  (+3 more)
server/src/helpers/: arrays_helper.py  chem_helper.py  imaging_helper.py  massspec_helper.py  pyproject.toml  structure_helper.py
tests/: conftest.py  test_agent_callbacks.py  test_anndata_preview.py  test_citations.py  test_cors.py  test_gemini_cli.py  test_litellm_callbacks.py  test_manifest_runtime.py  test_mcp_settings.py  test_pdf_annotations_mcp.py  test_prep_sandbox.py  test_projects_api.py  test_runs_api.py  test_runtime_tracking.py  test_sandbox_api.py  test_settings_system_api.py  test_utils_models.py
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  vitest.setup.ts
(+309 files in other folders)
